# OpenCL-Assignment

./: CMakeLists.txt  main.c  main.h
OpenCL/: Kernel.cl
Tools/: OpenCL_Wrapper.c  OpenCL_Wrapper.h  Timer.c  Timer.h
